; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Internat.c_CopyStrToUni.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Internat.c_CopyStrToUni.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i32] zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @CopyStrToUni(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %24

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @CalcStrToUni(i8* %10)
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %5, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  %15 = call i32* @CopyUniStr(i8* bitcast ([1 x i32]* @.str to i8*))
  store i32* %15, i32** %2, align 8
  br label %24

16:                                               ; preds = %9
  %17 = load i64, i64* %5, align 8
  %18 = call i32* @Malloc(i64 %17)
  store i32* %18, i32** %4, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = load i64, i64* %5, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @StrToUni(i32* %19, i64 %20, i8* %21)
  %23 = load i32*, i32** %4, align 8
  store i32* %23, i32** %2, align 8
  br label %24

24:                                               ; preds = %16, %14, %8
  %25 = load i32*, i32** %2, align 8
  ret i32* %25
}

declare dso_local i64 @CalcStrToUni(i8*) #1

declare dso_local i32* @CopyUniStr(i8*) #1

declare dso_local i32* @Malloc(i64) #1

declare dso_local i32 @StrToUni(i32*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
